fixed some sus things that happen on mobile

--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -13,6 +13,7 @@ $dark-gray: #D9D9D9;
   .council_tab_buttons{
     display: flex;
     margin: 0.5em 0;
+    width: 100%;
     .title{
       margin-left: 0.5em;
       margin-bottom: 0.05em;
@@ -20,7 +21,8 @@ $dark-gray: #D9D9D9;
       background-color: $dark-gray;
       border: $charcoal solid 0.1em; 
       border-radius: 0.75em; 
-      width: 100%;  
+/*      width: 100%;  */
+      flex: 1;
       display:table;
       p {
         font-family: $title-font;
@@ -78,8 +80,10 @@ $dark-gray: #D9D9D9;
             align-self: flex-end;  
           }
           img.framed {
+            max-width: 8em;
             min-width: 8em;
-            height: 8em;
+            min-height: 8em;
+            max-height: 8em;
             $shadow-size: 7px;
             $border-size: 7px;
             border: $border-size solid $charcoal;
@@ -122,15 +126,27 @@ $dark-gray: #D9D9D9;
 @media screen and (max-width: 900px){
   /* stack name/pic/position on top of description */
   .councils {
+    &__description {
+        text-align: center;
+    }
     .council_info_box .council-chairs{
-        display: block;
-        .council-chair-box {
-          margin-bottom: 1.5em;
-          margin-left: 0;
+      margin-top: 1.5em;
+      display: block;
+      .council-chair-box {
+        margin-bottom: 1.5em;
+        margin-left: 0;
+        .council-chair__description{
+          text-align: center;
         }
         .council-chair-info-container{
+          display: flex;
+          justify-content: center;
+          text-align: center;
           display: block;
-          flex: none;
+          img.framed{
+            margin-bottom: 0.8em;
+          }
+        }
       }
     }
     /* makes tab buttons go vertically adjacent to each other */
@@ -139,6 +155,7 @@ $dark-gray: #D9D9D9;
       margin-bottom: 1em;
       .title {
         margin: 0.5em 0;
+        width: 100%;
       }
     }
   }
@@ -174,5 +191,13 @@ $dark-gray: #D9D9D9;
   /* three members per row rather than five */
   .councils .council_info_box .council-member-row .member-name{
         width: 33%;
+  }
+}
+@media screen and (max-width: 500px){
+  /* two members per row rather than five */
+  .councils .council_info_box .council-member-row .member-name{
+        width: 50%;
+        line-height: 0.8em;
+        padding-bottom: 0.4em;
   }
 }
